<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin_big"
    tools:context=".EditorActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/title" />

        <TextView
            android:id="@+id/detail_book_title"
            style="@style/EditorFieldStyle" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/price" />

        <TextView
            android:id="@+id/detail_price"
            style="@style/EditorFieldStyle" />

        <TextView
            style="@style/EditorFieldStyle"
            android:gravity="end"
            android:paddingRight="@dimen/margin_big"
            android:paddingTop="@dimen/margin_med"
            android:text="@string/price_unit"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/quantity" />

        <TextView
            android:id="@+id/detail_quantity"
            style="@style/EditorFieldStyle" />

        <Button
            android:id="@+id/quantity_plus"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/quantity_minus"
            android:text="@string/plus_sign" />

        <Button
            android:id="@+id/quantity_minus"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/minus_sign" />

    </RelativeLayout>

    <TextView
        style="@style/CategoryStyle"
        android:layout_marginTop="@dimen/margin_big"
        android:text="@string/supplier_info"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/name" />

        <TextView
            android:id="@+id/detail_supplier_name"
            style="@style/EditorFieldStyle" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/phone" />

        <TextView
            android:id="@+id/detail_supplier_phone"
            style="@style/EditorFieldStyle" />

    </RelativeLayout>

    <Button
        android:id="@+id/order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_big"
        android:text="@string/order" />
</LinearLayout>